feat:automatically update future forecasts, and background image

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container" id="main-container">
     <div class="today-container">
     <div class="today">
       <div class="city-info">
@@ -47,8 +47,8 @@
     </form>
    
 
-    <div class="future">
-      <div class="row">
+    <div class="future" id='future-container'>
+      <!-- <div class="row">
         <div class="unit col">
           <p class="font-xs">Mon</p>
           <div><img src="./src/asset/rainy.png" alt="rain"></div>
@@ -114,7 +114,7 @@
           <div><span class="font-m">14&deg;</span><span class="font-m">|</span><span
               class="font-m grey-out">8&deg;</span></div>
         </div>
-      </div>
+      </div> -->
 
 
 
